Whitespaces and links

--- a/AWS_Website/about.html
+++ b/AWS_Website/about.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="css/screen.css">
 
         <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-		
+
 		<style>
 
  /* Font Definitions */
@@ -95,7 +95,7 @@ div.WordSection1
         <section class="middle">
             <div class="container-fluid" style='width:70%;padding:30px'>
 			<div class=WordSection1>
-<p class=MsoNormal>SLITE – the only company in the world allowing you to do <u>live</u> presentations without a projector or a conference room. 
+<p class=MsoNormal>SLITE ï¿½ the only company in the world allowing you to do <u>live</u> presentations without a projector or a conference room.
 We can do everything PowerPoint can and 1,000 times more (literally) ... and for free. Why? Because we have a new patented technology allowing us to do magic:</p>
 
 <p class=MsoNormal>Do you want to do presentations without renting a projector? With
@@ -119,15 +119,15 @@ presentation, automatically? With SLITE you can!</p>
 <p class=MsoNormal>Do you want to control presentation with your cell phone?
 With SLITE you can!</p>
 
-<p class=MsoNormal>Do you want to say “next slide” or “go to marketing slide”
+<p class=MsoNormal>Do you want to say ï¿½next slideï¿½ or ï¿½go to marketing slideï¿½
 and presentation magically goes to that particular slide? With SLITE you can!</p>
 
 <p class=MsoNormal>Do you want to do presentations in a park, with audience
 watching it on their cell phones? With SLITE you can!</p>
 
-<p class=MsoNormal>… and much much much more.</p>
+<p class=MsoNormal>ï¿½ and much much much more.</p>
 
-<p class=MsoNormal> </p>
+<p class=MsoNormal>ï¿½</p>
 
 <p class=MsoNormal>So why did we created SLITE?</p>
 
@@ -137,7 +137,7 @@ events. What I liked about it was that this was an infinite medium: you could
 do fashion shows, paintings, masquerades and so on. Over time my events grew
 from simple DJ dancing to extravagant shows. But even that was not enough. I
 was limited by the walls of the clubs where I was doing my shows.
-And then I looked into the web …</p>
+And then I looked into the web ï¿½</p>
 
 <p class=MsoNormal>Who likes trivia shows? I do. So I hang out with very very
 smart people: PhDs, scientists, and just simply walking Wikipedias (and models
@@ -151,9 +151,9 @@ happened because of the PowerPoint inherit notion of data condensation. Did I me
 that with SLITE you can have infinite! data per slide? People cannot deal
 anymore with something that was designed in 1995 to model after the film which
 you used to stick into a projector. One of our missions in SLITE is to change the
-English meaning of the word “presentation”.</p>
+English meaning of the word ï¿½presentationï¿½.</p>
 
-<p class=MsoNormal> </p>
+<p class=MsoNormal>ï¿½</p>
 
 <p class=MsoNormal>We are a small company based in Silicon Valley, California,
 USA. We work hard on this product, but also want to make it fun. This might go
