--- a/AWS_Website/signin.html
+++ b/AWS_Website/signin.html
@@ -31,7 +31,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                       </button>
-                      <a href="http://slite.us/www/" class="logo"><img src="img/logo.png"></a>
+                      <a href="http://www.slite.us/www/" class="logo"><img src="img/logo.png"></a>
                     </div>
 
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -70,7 +70,7 @@
 
         <section class="middle">
             <div class="container-fluid">
-                
+
                 <form class="m-form-signin" role="form" action="/login" method="post">
                     <h1>Sign in</h1>
                     <div class="form-group">
