--- a/AWS_Website/signin.html
+++ b/AWS_Website/signin.html
@@ -31,7 +31,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                       </button>
-                      <a href="http://www.slite.us/www/" class="logo"><img src="img/logo.png"></a>
+                      <a href="http://www.slite.us/" class="logo"><img src="img/logo.png"></a>
                     </div>
 
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
