Bug fixes and "slite.us" chnaged to "www.slite.us"

--- a/BACKEND/FRONTEND/www/index.html
+++ b/BACKEND/FRONTEND/www/index.html
@@ -16,7 +16,7 @@
     <script src="./js/thumbs.0.6.0.min.js"></script>
 
     <script>
-      var socket = io.connect('http://slite.elasticbeanstalk.com:1337');
+      var socket = io.connect('http://slite-dev.elasticbeanstalk.com:1337');
       //var socket = io.connect('http://localhost:1337');
     </script>
     
@@ -24,13 +24,13 @@
 <body onload="startup()"
     ><br
     ><div class="UI topRow leftCol" id="menu">&nbsp;</div
-    ><div class="UI topRow midCol" id="URLBox">http://slite.us/<input type="text" id="URLSlides" value="A1"></div
+    ><div class="UI topRow midCol" id="URLBox">http://www.slite.us/<input type="text" id="URLSlides" value="A1"></div
     ><div class="UI topRow rightCol" id="timeDisplay">Start Timer</div
     ><br
     ><div class="UI midRow leftCol" id="notes">1: Beginning slide, or should I say 'slite'. Get ready to see powerpoint with all the powers of the web.</div
     ><div class="UI midRow midCol wrap" id="currentSlide" onclick="void(0)"
         ><div id="overlay"></div
-        ><iframe id="theIframe" class="frame" src="http://slite.us/A1" seamless></iframe
+        ><iframe id="theIframe" class="frame" src="http://www.slite.us/A1" seamless></iframe
     ></div
     ><div class="UI midRow rightCol" id="otherSlides">
         <button></button>
