Fixed scrolling in comments.

--- a/AWS_Website/hash_index.html
+++ b/AWS_Website/hash_index.html
@@ -90,6 +90,7 @@
 
 	function showHideComments(){
 		$("#comments").slideToggle();
+		$("#comments").css('overflow','scroll');
 	}
 
 	var isVideoOn = false;
