--- a/AWS_Website/hash_index.html
+++ b/AWS_Website/hash_index.html
@@ -1,4 +1,4 @@
-
+﻿
 <html>
 <head>
 	<title>Slite Pitch Deck</title>
@@ -7,22 +7,22 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-		<link rel="stylesheet" href="../css/videochat/videochat-style.css">
+		<link rel="stylesheet" href="../../css/videochat/videochat-style.css">
 
 
 	    <!-- slider JS files -->
 
-    <script src="../js/jquery-1.8.3.js"></script>
-    <script src="../js/jquery-ui-1.8.22.custom.min.js"></script>
-    <script class="rs-file" src="../js/jquery.royalslider.min.js"></script>
-    <script src="../js/jquery.infinitescroll.js"></script>
+    <script src="../../js/jquery-1.8.3.js"></script>
+    <script src="../../js/jquery-ui-1.8.22.custom.min.js"></script>
+    <script class="rs-file" src="../../js/jquery.royalslider.min.js"></script>
+    <script src="../../js/jquery.infinitescroll.js"></script>
     <script src="http://slite-dev.elasticbeanstalk.com:1337/socket.io/socket.io.js"></script>
 
     <!-- Lev: This script controls the laser dot -->
-    <script defer src="../js/LASER_RECEIVER.js"></script>
+    <script defer src="../../js/LASER_RECEIVER.js"></script>
 
     <!-- this is for resizing the presentation when it appears in the iframe in the remote-->
-    <!--<script type="text/javascript" defer src="./js/squeezeFrame.js"></script>
+    <!--<script type="text/javascript" defer src="../js/squeezeFrame.js"></script>
     <script type="text/javascript">
       myContainer="index.html";
       myMax=0.4;
@@ -30,15 +30,21 @@
     </script>-->
 
 
-    <link href="../css/jquery-ui-1.8.22.custom.css" rel="stylesheet">
-    <link class="rs-file" href="../css/royalslider.css" rel="stylesheet">
+    <link href="../../css/jquery-ui-1.8.22.custom.css" rel="stylesheet">
+    <link class="rs-file" href="../../css/royalslider.css" rel="stylesheet">
 
-	<link rel="stylesheet" type="text/css" href="../css/index1.css">
+	<link rel="stylesheet" type="text/css" href="../../css/index1.css">
 
 	<script>
 
-    var socket = io.connect('http://slite-dev.elasticbeanstalk.com:1337');
-    //var socket = io.connect('http://localhost:1337');
+        var url;
+        if (document.location.hostname == 'localhost' || document.location.hostname == '127.0.0.1') {
+            url = 'http://localhost';
+        } else {
+            url = 'http://slite-dev.elasticbeanstalk.com';
+        }
+        url += ':1337';
+        var socket = io.connect(url);
 
     socket.on('ccBroadcast', function (data) {
     		//alert("JD: ccBroadcast text="+data.hello);
@@ -115,20 +121,20 @@
 
 
     <!-- syntax highlighter -->
-    <script src="../js/highlight.pack.js"></script>
+    <script src="../../js/highlight.pack.js"></script>
     <script> hljs.initHighlightingOnLoad();</script>
 
 
 
 
     <!-- preview-related stylesheets -->
-    <link href="../css/reset.css" rel="stylesheet">
-    <link href="../css/github.css" rel="stylesheet">
+    <link href="../../css/reset.css" rel="stylesheet">
+    <link href="../../css/github.css" rel="stylesheet">
 
     <!-- slider stylesheets -->
 
 
-    <link class="rs-file" href="../css/rs-default.css" rel="stylesheet">
+    <link class="rs-file" href="../../css/rs-default.css" rel="stylesheet">
 
 
 	<style>
@@ -378,12 +384,12 @@
         </script>
 
         <!-- scripts used for video-conferencing -->
-        <script src="../js/videochat/firebase.js"> </script>
-        <script src="../js/videochat/RTCPeerConnection-v1.5.js"> </script>
-        <script src="../js/videochat/conference.js"> </script>
+        <script src="../../js/videochat/firebase.js"> </script>
+        <script src="../../js/videochat/RTCPeerConnection-v1.5.js"> </script>
+        <script src="../../js/videochat/conference.js"> </script>
 
         <!-- script used to stylize video element -->
-        <script src="../js/videochat/getMediaElement.js"> </script>
+        <script src="../../js/videochat/getMediaElement.js"> </script>
 
 		<script>
 /*
@@ -410,7 +416,7 @@
 
 	<div id="sliteWatermak">Powered by SLITE.US</div>
 
-    <div id="redDot"><img src="../img/redDot.png" alt="Laser Pointer"></div>
+    <div id="redDot"><img src="../../img/redDot.png" alt="Laser Pointer"></div>
 
   	<div id="video-gallery" class="royalSlider videoGallery rsDefault"></div>
 
@@ -433,7 +439,7 @@
 		<section class="experiment">
 			<section id="chatTop">
 				<span>
-					Private ?? <a href="/video-conferencing/" target="_blank" title="Open this link in new tab. Then your conference room will be private!"><code><strong id="unique-token">#123456789</strong></code></a>
+					Private ?? <a href="../video-conferencing/" target="_blank" title="Open this link in new tab. Then your conference room will be private!"><code><strong id="unique-token">#123456789</strong></code></a>
 				</span>
 
 				<input type="text" id="conference-name">
