--- a/BACKEND/FRONTEND/www/index.html
+++ b/BACKEND/FRONTEND/www/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" content="user-scalable=yes">
     <title>SENDER</title>
     <link rel="stylesheet" type="text/css" href="./css/index.css">
-    <script src="./js/socket.io.js"></script>
+    <script src="http://slite-dev.elasticbeanstalk.com:1337/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
     <script src="./js/jquery-2.0.3.min.js"></script>
     <script src="./js/speechRecognizer.js"></script>
