--- a/AWS_Website/hash_index.html
+++ b/AWS_Website/hash_index.html
@@ -54,7 +54,8 @@
     });
 
     socket.on('news', function (data) {
-
+      if (document.location.pathname == "/slites/"+ data.slideID +"/") {
+      	
       var button = data.hello-1;
 
       console.log(button);
@@ -91,6 +92,7 @@
       }
 
       socket.emit('my other event', { my: 'data' });
+      }
     });
 
 
