"Powered by SLITE" is now a link to www.slite.us

--- a/AWS_Website/hash_index.html
+++ b/AWS_Website/hash_index.html
@@ -416,7 +416,7 @@
 
     <canvas id="drawCanvas" ></canvas>
 
-	<div id="sliteWatermak">Powered by SLITE.US</div>
+	<a href="/" id="sliteWatermak">Powered by SLITE.US</a>
 
     <div id="redDot"><img src="../../img/redDot.png" alt="Laser Pointer"></div>
 
