Changed slite URL

--- a/AWS_Website/remote-nasa/index.html
+++ b/AWS_Website/remote-nasa/index.html
@@ -34,7 +34,7 @@ window.scrollTo(0,1);
 
 <div id="currentSlide" onclick="void(0)" style="z-index: 90; height: 100%; width: 100%"><div id="overlay"></div>
 
-<iframe id="theIframe" class="frame" src="http://www.slite.us/nasas" seamless></iframe>
+<iframe id="theIframe" class="frame" src="http://www.slite.us/slites/nasas" seamless></iframe>
 
 </div>
 
