Added explanator for presentation url

--- a/AWS_Website/slites/A1/index.html
+++ b/AWS_Website/slites/A1/index.html
@@ -527,7 +527,7 @@
 			.startTemporaryPopup{
 				display: none;
 				position: fixed;
-				font-size: 36px;
+				font-size: 26px;
 				color: blue;
 				background-color: rgb(232, 223, 223);
 				border: 2px solid;
@@ -560,6 +560,11 @@
 				transform: rotate(-60deg);
 				right: 5px;
 				top: 180px;
+			}
+			
+			#urlExplanator{
+				left: 5px;
+				top: 10px;
 			}
 
 	</style>
@@ -824,6 +829,7 @@
 	
 	<div class="startTemporaryPopup" id="videoChatExplanator">&#8592; click grey bar to open Video Chat</div>
 	<div class="startTemporaryPopup" id="wallChatExplanator">click grey bar to open Wall/Chat &#8594;</div>
+	<div class="startTemporaryPopup" id="urlExplanator">share this is unique address of your presentation &#8593;</div>
 	<div class="startTemporaryPopup" id="menuExplanator">click ☰ to open Menu &#8594;</div>
 	<div class="startTemporaryPopup" id="closeExplanator"><div id="closeExplanatorText">Click Here To Close Help</div></div>
 	
