--- a/AWS_Website/hash_index.html
+++ b/AWS_Website/hash_index.html
@@ -54,7 +54,7 @@ socket.on('ccBroadcast', function (data) {
 
 socket.on('news', function (data) {
 
-	if (document.location.pathname == "/slites/"+ data.slideID +"/") {
+	if (document.location.pathname == "/"+ data.slideID +"/") {
 		var button = data.hello-1;
 
 		console.log(button);
